Fix css document spacing, remove comments

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -60,7 +60,7 @@ main article {
 
 .tweet-icons {
   display: flex;
-  width: 13%;
+  width: 5em;
   margin-right: 1em;
 }
 
@@ -79,7 +79,6 @@ main article {
   margin: 1%;
   margin-right: 1em;
 }
-
 
 .tweet-body {
   width: 95%;
@@ -107,4 +106,3 @@ main article {
   margin: 1em;
   justify-content: flex-end;
 }
-
